--- a/app/components/report-review-warning/template.hbs
+++ b/app/components/report-review-warning/template.hbs
@@ -1,24 +1,25 @@
-{{#if unverifiedReports.hasReports}}
+{{#if this.unverifiedReports.hasReports}}
   <li class="nav-top-list-item" title="You have reports to verify">
-    {{#link-to "analysis.index"
-               (query-params
-                 fromDate=null
-                 toDate=unverifiedReports.reportsToDate
-                 reviewer=session.data.user.id
-                 editable=1
-                 verified=0
-                 customer=null
-                 project=null
-                 task=null
-                 user=null
-                 billingType=null
-                 costCenter=null
-                 review=""
-                 notBillable=""
-               )
-    }}
-      {{fa-icon "exclamation-triangle"}}
-      {{unverifiedReports.amountReports}}
-    {{/link-to}}
+    <LinkTo
+      @route="analysis.index"
+      @query={{hash
+        fromDate=null
+        toDate=this.unverifiedReports.reportsToDate
+        reviewer=this.session.data.user.id
+        editable=1
+        verified=0
+        customer=null
+        project=null
+        task=null
+        user=null
+        billingType=null
+        costCenter=null
+        review=""
+        notBillable=""
+      }}
+    >
+      <FaIcon @icon="exclamation-triangle" />
+      {{this.unverifiedReports.amountReports}}
+    </LinkTo>
   </li>
 {{/if}}
