--- a/app/components/welcome-modal/template.hbs
+++ b/app/components/welcome-modal/template.hbs
@@ -2,7 +2,7 @@
   {{#modal.body}}
     <div class="text-center">
       <h1>Welcome to Timed!</h1>
-      <img style="max-width:50%" src="/assets/logo.svg">
+      <img class="welcome-logo" src="/assets/logo.svg" alt="welcome-logo">
       <h4>Would you like to take a tour?</h4>
     </div>
   {{/modal.body}}
