--- a/app/components/no-mobile-message/template.hbs
+++ b/app/components/no-mobile-message/template.hbs
@@ -7,6 +7,6 @@
   </p>
   <p>
     Try opening this page on a larger device, or go back to the
-    {{#link-to 'index'}}home page{{/link-to}}!
+    <LinkTo @route="index">home page</LinkTo>!
   </p>
 </div>
