--- a/app/components/sy-durationpicker/template.hbs
+++ b/app/components/sy-durationpicker/template.hbs
@@ -1,4 +1,5 @@
 <input
+  aria-label="Duration"
   type="text"
   class="form-control"
   pattern={{this.pattern}}
@@ -6,5 +7,5 @@
   maxlength={{this.maxlength}}
   placeholder={{this.placeholder}}
   autocomplete="off"
-  {{on "keydown" this.handleKeyPress}}
+  {{on "keyup" this.handleKeyPress}}
 />
