--- a/app/components/sy-topnav/template.hbs
+++ b/app/components/sy-topnav/template.hbs
@@ -1,62 +1,68 @@
 <header class="nav-top-header">
-  <button class="nav-toggle nav-top-toggle" {{action (toggle 'expand' this) on='click'}}>
+  <button
+    type="button"
+    class="nav-toggle nav-top-toggle"
+    {{on "click" (fn (toggle "expand" this))}}
+  >
     <span class="nav-toggle-icon"></span>
   </button>
-  {{#link-to 'index'}}
-    {{timed-clock}}
+  <LinkTo @route="index">
+    <TimedClock />
     <div class="nav-top-header-title">
       Timed
       <div class="nav-top-header-title-version">
         v{{app-version hideSha=true}}
       </div>
     </div>
-  {{/link-to}}
+  </LinkTo>
 </header>
 <section class="nav-top-body">
   <ul class="nav-top-list">
     <li class="nav-top-list-item">
-      {{#link-to 'index'}}
-        {{fa-icon 'clock-o'}} Tracking
-      {{/link-to}}
+      <LinkTo @route="index">
+        <FaIcon @icon="clock-o" /> Tracking
+      </LinkTo>
     </li>
-    {{#unless navMobile}}
+    {{#unless this.navMobile}}
       {{#if (can "access page")}}
         <li class="nav-top-list-item">
-          {{#link-to 'analysis'}}
-            {{fa-icon 'line-chart'}} Analysis
-          {{/link-to}}
+          <LinkTo @route="analysis">
+              <FaIcon @icon="line-chart" /> Analysis
+          </LinkTo>
         </li>
         <li class="nav-top-list-item">
-          {{#link-to 'statistics'}}
-            {{fa-icon 'bar-chart'}} Statistics
-          {{/link-to}}
+          <LinkTo @route="statistics">
+              <FaIcon @icon="bar-chart" /> Statistics
+          </LinkTo>
         </li>
         <li class="nav-top-list-item">
-          {{#link-to 'projects'}}
-            {{fa-icon 'briefcase'}} Projects
-          {{/link-to}}
+          <LinkTo @route="projects">
+            <FaIcon @icon="briefcase" /> Projects
+          </LinkTo>
         </li>
       {{/if}}
     {{/unless}}
-    {{#if session.data.user.isSuperuser}}
+    {{#if this.session.data.user.isSuperuser}}
       <li class="nav-top-list-item">
-        {{#link-to 'users.index'}}
-          {{fa-icon 'users'}} Users
-        {{/link-to}}
+        <LinkTo @route="users.index">
+          <FaIcon @icon="users" /> Users
+        </LinkTo>
       </li>
     {{/if}}
   </ul>
   <ul class="nav-top-list nav-top-list--right">
-    {{report-review-warning}}
+    <ReportReviewWarning />
     <li class="nav-top-list-item">
-      {{#link-to 'users.edit' session.data.user.id}}
-        {{fa-icon 'user'}} {{session.data.user.fullName}}
-      {{/link-to}}
+      <LinkTo
+        @route="users.edit"
+        @model={{this.session.data.user.id}}
+      >
+        <FaIcon @icon="user" /> {{this.session.data.user.fullName}}
+      </LinkTo>
     </li>
     <li class="nav-top-list-item">
       <a href="#" data-test-logout {{action (optional on-logout)}}>
-        {{fa-icon 'power-off'}}
-        Logout
+        <FaIcon @icon="power-off" /> Logout
       </a>
     </li>
   </ul>
