--- a/app/index/activities/edit/template.hbs
+++ b/app/index/activities/edit/template.hbs
@@ -4,37 +4,39 @@
       {{#link-to 'index.activities'}}{{fa-icon 'chevron-left'}}{{/link-to}}
     </div>
     <div class="card-block">
-      {{#task-selection task=changeset.task as |t|}}
+      <TaskSelection @task={{this.changeset.task}} as |t|>
         <div class="form-group">{{t.customer}}</div>
         <div class="form-group">{{t.project}}</div>
         <div class="form-group">{{t.task}}</div>
-      {{/task-selection}}
+      </TaskSelection>
+    </div>
+    <div class="card-footer text-right">
       <div class="form-group">
         <input
           type="text"
           class="form-control comment-field"
           placeholder="Comment"
           name="comment"
-          value={{changeset.comment}}
-          onchange={{action (mut changeset.comment) value='target.value'}}
+          value={{this.changeset.comment}}
+          {{ on "change" (pick "target.value" (fn (mut this.changeset.comment)))}}
         >
-        {{#if changeset.task.project.customerVisible }}
+        {{#if this.changeset.task.project.customerVisible }}
           <CustomerVisibleIcon class="customer-visible-icon" />
         {{/if}}
       </div>
       <div class="form-group checkboxes">
-        {{sy-checkbox
+        <SyCheckbox
           data-test-activity-review
-          checked=changeset.review
-          on-change=(action (mut changeset.review))
-          label='Needs review'
-        }}
-        {{sy-checkbox
+          @checked={{this.changeset.review}}
+          @label={{'Needs review'}}
+          {{ on "change" (fn this.toggle "review")}}
+        />
+        <SyCheckbox
           data-test-activity-not-billable
-          checked=changeset.notBillable
-          on-change=(action (mut changeset.notBillable))
-          label='Not billable'
-        }}
+          @checked={{this.changeset.notBillable}}
+          @label='Not billable'
+          {{ on "change" (fn this.toggle "notBillable")}}
+        />
       </div>
       <table class="table table--striped table--activity-edit">
         <tbody>
@@ -42,32 +44,32 @@
             data-test-activity-block-row
           >
             <td class="form-group {{if changeset.error.from 'has-error'}}">
-              {{sy-timepicker
-                value        = changeset.from
-                max          = changeset.to
-                precision    = 1
-                on-focus-out = (action 'validateChangeset' changeset)
-                onChange    = (action (mut changeset.from))
-              }}
+              <SyTimepicker 
+                @value={{this.changeset.from}}
+                @max={{this.changeset.to}}
+                @precision={{1}}
+                @focusOut={{(fn this.validateChangeset this.changeset) }}
+                @onChange={{(fn (mut this.changeset.from))}}
+                />
             </td>
             <td>-</td>
             <td class="form-group {{if changeset.error.to 'has-error'}}">
-              {{sy-timepicker
-                value        = changeset.to
-                min          = changeset.from
-                precision    = 1
-                disabled     = (if changeset.active true)
-                on-focus-out = (action 'validateChangeset' changeset)
-                onChange    = (action (mut changeset.to))
-              }}
+              <SyTimepicker
+                @value={{this.changeset.to}}
+                @min={{this.changeset.from}}
+                @precision={{1}}
+                @disabled={{(if this.changeset.active true)}}
+                @focusOut={{(fn this.validateChangeset this.changeset)}}
+                @onChange={{(fn (mut changeset.to))}}
+                />
             </td>
           </tr>
         </tbody>
       </table>
     </div>
     <div class="card-footer text-right">
-      <button class="btn btn-danger" type="button" disabled={{model.active}} {{action 'delete'}} data-test-activity-edit-form-delete>Delete</button>
-      <button class="btn btn-primary" type="submit" disabled={{not saveEnabled}} data-test-activity-edit-form-save>Save</button>
+      <button class="btn btn-danger" type="button" disabled={{model.active}} {{ on "click" this.delete }} data-test-activity-edit-form-delete>Delete</button>
+      <button class="btn btn-primary" type="submit" disabled={{not this.saveEnabled}} data-test-activity-edit-form-save>Save</button>
     </div>
   </div>
 </form>
