fix(sy-checkbox): refactor to glimmer component

--- a/app/components/sy-checkbox/template.hbs
+++ b/app/components/sy-checkbox/template.hbs
@@ -1,8 +1,21 @@
-<input
-  type="checkbox"
-  id={{checkboxElementId}}
-  checked={{checked}}
-  disabled={{disabled}}
-  onchange={{action on-change value='target.checked'}}
->
-<label for={{checkboxElementId}} title={{title}}>{{#if (has-block)}}{{~yield~}}{{else}}{{#if label}}{{~label~}}{{else}}&nbsp;{{/if}}{{/if}}</label>
+<div class="checkbox">
+  <input
+    type="checkbox"
+    id={{this.checkboxElementId}}
+    checked={{@checked}}
+    disabled={{@disabled}}
+    {{on "change" (fn this.onChange (pick "target.checked"))}}
+    {{did-insert this.handleCheckBox}}
+  >
+  <label for={{this.checkboxElementId}} title={{@title}}>
+    {{#if (has-block)}}
+      {{yield}}
+    {{else}}
+      {{#if @label}}
+        {{@label}}
+      {{else}}
+        &nbsp;
+      {{/if}}
+    {{/if}}
+  </label>
+</div>
