--- a/app/index/activities/edit/template.hbs
+++ b/app/index/activities/edit/template.hbs
@@ -1,10 +1,11 @@
-<form data-test-activity-edit-form {{action 'save' on='submit'}}>
+{{#let (changeset @model this.validations this.validationMap) as |cs|}}
+<form data-test-activity-edit-form {{on "submit" (fn this.save cs)}}>
   <div class="card">
     <div class="card-header hidden-lg">
-      {{#link-to 'index.activities'}}{{fa-icon 'chevron-left'}}{{/link-to}}
+      <LinkTo @route={{'index.activities'}} >{{fa-icon 'chevron-left'}}</LinkTo>
     </div>
     <div class="card-block">
-      <TaskSelection @task={{this.changeset.task}} as |t|>
+      <TaskSelection @task={{cs.task}} as |t|>
         <div class="form-group">{{t.customer}}</div>
         <div class="form-group">{{t.project}}</div>
         <div class="form-group">{{t.task}}</div>
@@ -17,25 +18,25 @@
           class="form-control comment-field"
           placeholder="Comment"
           name="comment"
-          value={{this.changeset.comment}}
-          {{ on "change" (pick "target.value" (fn (mut this.changeset.comment)))}}
+          value={{cs.comment}}
+          {{ on "change" (fn this.updateValue cs "comment") }}
         >
-        {{#if this.changeset.task.project.customerVisible }}
+        {{#if cs.task.project.customerVisible }}
           <CustomerVisibleIcon class="customer-visible-icon" />
         {{/if}}
       </div>
       <div class="form-group checkboxes">
         <SyCheckbox
           data-test-activity-review
-          @checked={{this.changeset.review}}
+          @checked={{cs.review}}
           @label={{'Needs review'}}
-          {{ on "change" (fn this.toggle "review")}}
+          @onChange={{(fn this.toggleValue cs "review")}}
         />
         <SyCheckbox
           data-test-activity-not-billable
-          @checked={{this.changeset.notBillable}}
+          @checked={{cs.notBillable}}
           @label='Not billable'
-          {{ on "change" (fn this.toggle "notBillable")}}
+          @onChange={{(fn this.toggleValue cs "notBillable")}}
         />
       </div>
       <table class="table table--striped table--activity-edit">
@@ -43,24 +44,24 @@
           <tr
             data-test-activity-block-row
           >
-            <td class="form-group {{if changeset.error.from 'has-error'}}">
+            <td class="form-group {{if cs.error.from 'has-error'}}">
               <SyTimepicker 
-                @value={{this.changeset.from}}
-                @max={{this.changeset.to}}
+                @value={{cs.from}}
+                @max={{cs.to}}
                 @precision={{1}}
-                @focusOut={{(fn this.validateChangeset this.changeset) }}
-                @onChange={{(fn (mut this.changeset.from))}}
+                @focusOut={{(fn this.validateChangeset cs) }}
+                @onChange={{(fn (mut cs.from))}}
                 />
             </td>
             <td>-</td>
-            <td class="form-group {{if changeset.error.to 'has-error'}}">
+            <td class="form-group {{if cs.error.to 'has-error'}}">
               <SyTimepicker
-                @value={{this.changeset.to}}
-                @min={{this.changeset.from}}
+                @value={{cs.to}}
+                @min={{cs.from}}
                 @precision={{1}}
-                @disabled={{(if this.changeset.active true)}}
-                @focusOut={{(fn this.validateChangeset this.changeset)}}
-                @onChange={{(fn (mut changeset.to))}}
+                @disabled={{(if cs.active true)}}
+                @focusOut={{(fn this.validateChangeset cs)}}
+                @onChange={{(fn (mut cs.to))}}
                 />
             </td>
           </tr>
@@ -68,8 +69,9 @@
       </table>
     </div>
     <div class="card-footer text-right">
-      <button class="btn btn-danger" type="button" disabled={{model.active}} {{ on "click" this.delete }} data-test-activity-edit-form-delete>Delete</button>
-      <button class="btn btn-primary" type="submit" disabled={{not this.saveEnabled}} data-test-activity-edit-form-save>Save</button>
+      <button class="btn btn-danger" type="button" disabled={{@model.active}} {{ on "click" this.delete }} data-test-activity-edit-form-delete>Delete</button>
+      <button class="btn btn-primary" type="submit" disabled={{not (and cs.isDirty cs.isValid)}} data-test-activity-edit-form-save>Save</button>
     </div>
   </div>
 </form>
+{{/let}}
