--- a/app/analysis/edit/template.hbs
+++ b/app/analysis/edit/template.hbs
@@ -73,7 +73,6 @@
                   </f.input>
 
                   <f.input
-                    data-test-comment
                     @name='comment'
                     as |fi|
                   >
@@ -87,6 +86,7 @@
                       {{/if}}
                     </label>
                     <input
+                      data-test-comment
                       type="text"
                       placeholder="Enter comment..."
                       class="form-control comment-field"
@@ -99,11 +99,11 @@
                   </f.input>
 
                   <f.input
-                    data-test-not-billable
                     @name='notBillable'
                     as |fi|
                   >
                     <SyCheckbox
+                      data-test-not-billable
                       @checked={{fi.value}}
                       @on-change={{fi.update}}
                     >
@@ -118,11 +118,11 @@
                   </f.input>
 
                   <f.input
-                    data-test-review
                     @name='review'
                     as |fi|
                   >
                     <SyCheckbox
+                      data-test-review
                       @checked={{fi.value}}
                       @on-change={{fi.update}}
                     >
@@ -137,11 +137,11 @@
                   </f.input>
 
                   <f.input
-                    data-test-billed
                     @name='billed'
                     as |fi|
                   >
                     <SyCheckbox
+                      data-test-billed
                       @checked={{fi.value}}
                       @on-change={{fi.update}}
                       @title="You do not have appropriate roles for this action."
@@ -157,12 +157,9 @@
                     </SyCheckbox>
                   </f.input>
 
-                  <f.input
-                    data-test-verified
-                    @name='verified'
-                    as |fi|
-                  >
+                  <f.input @name='verified' as |fi|>
                     <SyCheckbox
+                      data-test-verified
                       @checked={{fi.value}}
                       @on-change={{fi.update}}
                       @title={{toolTipText}}
